# auror

./: .gitignore  Cargo.toml  PKGBUILD  README.md  aurord.service  change-log.md
aurorc/: Cargo.toml
aurorc/src/: app.rs  ipc_client.rs  main.rs  ui.rs
aurord/: Cargo.toml
aurord/src/: builder.rs  checker.rs  config.rs  ipc.rs  lock.rs  main.rs  notifier.rs  repo.rs  scheduler.rs  state.rs  sync.rs  utils.rs
shared/: Cargo.toml
shared/src/: lib.rs
